--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Типотека",
   "main": "./src/service/service.js",
   "scripts": {
-    "test": "npm run eslint",
+    "test": "npm run eslint && npm run test::rest",
     "eslint": "eslint --ext .js src/",
     "start": "node ./src/service/service.js",
     "server": "nodemon ./src/service/service.js --server 3000",
-    "start-front-server": "nodemon ./src/express/express.js"
+    "start-front-server": "nodemon ./src/express/express.js",
+    "test::rest": "jest"
   },
   "repository": {
     "type": "git",
@@ -23,7 +24,9 @@
   "devDependencies": {
     "eslint": "7.25.0",
     "eslint-config-htmlacademy": "0.6.0",
-    "nodemon": "^2.0.7"
+    "jest": "27.0.4",
+    "nodemon": "2.0.7",
+    "supertest": "6.1.3"
   },
   "dependencies": {
     "chalk": "^4.1.1",
