--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "npm run eslint && npm run test::rest",
     "eslint": "eslint --ext .js src/",
-    "start": "node ./src/service/service.js",
+    "start": "cross-env NODE_ENV=production node ./src/service/service.js",
+    "start::debug": "cross-env NODE_ENV=development nodemon ./src/service/service.js",
     "server": "nodemon ./src/service/service.js --server 3000",
     "start-front-server": "nodemon ./src/express/express.js",
     "test::rest": "jest"
@@ -26,12 +27,15 @@
     "eslint-config-htmlacademy": "0.6.0",
     "jest": "27.0.4",
     "nodemon": "2.0.7",
+    "pino-pretty": "5.0.2",
     "supertest": "6.1.3"
   },
   "dependencies": {
-    "chalk": "^4.1.1",
+    "chalk": "4.1.1",
+    "cross-env": "7.0.3",
     "express": "^4.17.1",
     "nanoid": "3.1.23",
-    "pug": "^2.0.4"
+    "pino": "6.11.3",
+    "pug": "2.0.4"
   }
 }
