refs #module6-task1 *add sequelize

--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,8 @@ node_modules/
 # Папка с собранными файлами проекта
 build/
 
+# Файл с моковыми данными
 mocks.json
+
+# Файл с переменными окружения
+.env
