--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "npm run eslint && npm run test::rest",
     "eslint": "eslint --ext .js src/",
-    "start": "cross-env NODE_ENV=production node ./src/service/service.js",
-    "start::debug": "cross-env NODE_ENV=development nodemon ./src/service/service.js",
+    "start": "cross-env LOG_LEVEL=error NODE_ENV=production node -r dotenv/config ./src/service/service.js",
+    "start::debug": "cross-env LOG_LEVEL=info NODE_ENV=development node -r dotenv/config ./src/service/service.js",
     "server": "nodemon ./src/service/service.js --server 3000",
     "start-front-server": "nodemon ./src/express/express.js",
     "test::rest": "jest"
@@ -34,10 +34,13 @@
     "axios": "0.21.1",
     "chalk": "4.1.1",
     "cross-env": "7.0.3",
+    "dotenv": "10.0.0",
     "express": "4.17.1",
     "multer": "1.4.2",
     "nanoid": "3.1.23",
+    "pg": "8.6.0",
     "pino": "6.11.3",
-    "pug": "2.0.4"
+    "pug": "2.0.4",
+    "sequelize": "6.6.4"
   }
 }
